--- a/AWCFilebrowser/Properties/Settings.settings
+++ b/AWCFilebrowser/Properties/Settings.settings
@@ -1,7 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="AWSFileBroeser.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="currentFile" Type="System.String" Scope="User">
+      <Value Profile="(Default)"> @"C:\Users"</Value>
+    </Setting>
+    <Setting Name="playLists" Type="System.String" Scope="User">
+      <Value Profile="(Default)">.m3u</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
