--- a/AWCFilebrowser/App.config
+++ b/AWCFilebrowser/App.config
@@ -19,6 +19,9 @@
       <setting name="playLists" serializeAs="String">
         <value>.m3u</value>
       </setting>
+      <setting name="currentList" serializeAs="String">
+        <value>""</value>
+      </setting>
     </AWSFileBroeser.Properties.Settings>
   </userSettings>
 </configuration>
