--- a/AWCFilebrowser/AWCFilebrowser.csproj
+++ b/AWCFilebrowser/AWCFilebrowser.csproj
@@ -149,6 +149,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="ListViewSort .cs" />
+    <Compile Include="ListViewItemComparer .cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
