--- a/AWCFilebrowser/App.config
+++ b/AWCFilebrowser/App.config
@@ -22,6 +22,24 @@
       <setting name="currentList" serializeAs="String">
         <value>""</value>
       </setting>
+      <setting name="soundVolume" serializeAs="String">
+        <value>50</value>
+      </setting>
+      <setting name="formWidth" serializeAs="String">
+        <value>1560</value>
+      </setting>
+      <setting name="formHight" serializeAs="String">
+        <value>750</value>
+      </setting>
+      <setting name="fileBrowserVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="playListVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="isFullScreene" serializeAs="String">
+        <value>False</value>
+      </setting>
     </AWSFileBroeser.Properties.Settings>
   </userSettings>
 </configuration>
